# camilladsp-local

./: .gitignore  README.md  default.yml  full_install_venv.sh  runbkgd.sh  runme.txt  shairport-sync.conf  start_script.sh
automator/LaunchShairport.app/Contents/: Info.plist  document.wflow
automator/LaunchShairport.app/Contents/MacOS/: Automator Application Stub
automator/LaunchShairport.app/Contents/_CodeSignature/: CodeResources
camillagui_backend/_internal/camilladsp_plot/schemas/: basicfilters.json  capture.json  conv.json  mixer.json  playback.json  processor.json
camillagui_backend/_internal/jsonschema-4.23.0.dist-info/: RECORD
camillagui_backend/_internal/numpy-2.2.4.dist-info/: RECORD
configs/: active_config_min.yml
gui/: cdsp_conda.yml  pyproject.toml  requirements.txt
launch_agents/: com.camilladsp.launch.plist  com.camillagui.plist
