[tool.poetry]
name = "camillagui-backend"
version = "3.0.3"
description = "Backend server for CamillaGUI"
authors = ["Henrik Enquist <henrik.enquist@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.6.4"
jsonschema = "^4.20.0"
aiohttp = "^3.9.0"
numpy = "^1.26.0"
PyYAML = "^6.0.0"
camilladsp = {git = "https://github.com/HEnquist/pycamilladsp.git", rev = "v3.0.0"}
camilladsp-plot = {git = "https://github.com/HEnquist/pycamilladsp-plot.git", rev = "v3.0.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"